--- a/project/webpages/student-profile.html
+++ b/project/webpages/student-profile.html
@@ -260,7 +260,7 @@
       <div class="profile-image-wrap">
         <img
           id="profile-photo"
-          src="/project/images/tamu/profile-placeholder.png"
+          src="/project/images/tamu/profile-placeholder.jpg"
           alt="Student Profile Photo"
         />
 
