case mgmt updates

--- a/project/webpages/case-management.html
+++ b/project/webpages/case-management.html
@@ -109,9 +109,23 @@
     </div>
   </section>
 
+<!-- FACULTY ACCESS -->
+<section class="panel">
+  <h2>Faculty Management Access</h2>
+  <p>
+    The tools below are designed for CMIS faculty and administrators responsible for
+    managing case competitions. These capabilities support competition setup, team oversight,
+    rubric configuration, judging workflows, and results publication.
+  </p>
+  <p class="note">
+    <strong>Prototype note:</strong> Authentication and role-based access controls would be
+    enforced in a production implementation.
+  </p>
+</section>
+
   <!-- FACULTY LOGIN -->
   <section class="panel" id="login-panel">
-    <h2>Faculty Login</h2>
+    <h2>Faculty Login (Prototype)</h2>
     <label>Email</label>
     <input id="faculty-email" type="email" placeholder="faculty@tamu.edu">
 
