--- a/project/webpages/sponsor-portal.html
+++ b/project/webpages/sponsor-portal.html
@@ -553,9 +553,9 @@
       <div style="margin-top:0.75rem;">
         <!-- If you already have a CMIS calendar embed you prefer, swap the src here -->
         <iframe
-          src="https://calendar.google.com/calendar/embed?src=c_aa04b7ddd08555ab1fcb0e74394290252e6c731a07e9bc0413554445cea109de%40group.calendar.google.com&ctz=America%2FChicago"
+          src="https://calendar.google.com/calendar/embed?src=d6805ad1a782e4a6ae56e3ccd0005dc2adaf6f28733fca60b3f026489cfd21db%40group.calendar.google.com&ctz=America%2FChicago"
           scrolling="no"
-          title="CMIS Calendar">
+          title="CMIS Events Calendar">
         </iframe>
       </div>
     </section>
