updates page ref links

--- a/project/webpages/mentorship.html
+++ b/project/webpages/mentorship.html
@@ -200,6 +200,7 @@
     <ul class="menu">
       <li><a href="/project/webpages/homepage.html">Home</a></li>
       <li><a href="/project/webpages/student-hub.html">Student Hub</a></li>
+      <li><a href="/project/webpages/partners.html">Partners</a></li>
       <li><a href="/project/webpages/case-management.html">Case Mgmt</a></li>
       <li><a href="/project/webpages/sponsor-portal.html">Sponsor Portal</a></li>
       <li><a href="/project/webpages/mentorship.html" class="current">Mentorship</a></li>
