--- a/project/webpages/sponsor-portal.html
+++ b/project/webpages/sponsor-portal.html
@@ -243,6 +243,7 @@
     <ul class="menu">
       <li><a href="/project/webpages/homepage.html">Home</a></li>
       <li><a href="/project/webpages/student-hub.html">Student Hub</a></li>
+      <li><a href="/project/webpages/partners.html">Partners</a></li>
       <li><a href="/project/webpages/case-management.html">Case Mgmt</a></li>
       <li><a href="/project/webpages/sponsor-portal.html" class="current">Sponsor Portal</a></li>
       <li><a href="/project/webpages/mentorship.html">Mentorship</a></li>
