--- a/refuel/webpages/index.html
+++ b/refuel/webpages/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>REfuel BCS | Mobile Fuel Delivery</title>
   <meta name="description" content="REfuel BCS brings fuel to your car—home, work, or roadside. Fast, convenient mobile refueling in the Brazos Valley." />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/refuel/css_files/styles.css" />
 </head>
 
 <body>
