--- a/refuel/index.html
+++ b/refuel/index.html
@@ -128,30 +128,57 @@
     </section>
 
     <!-- How it works -->
-    <section class="section" id="how">
-      <div class="container">
-        <h2>How it works</h2>
-        <p class="muted">Three simple steps to get refueled without a gas station trip.</p>
+<!-- How it works -->
+<section class="section" id="how">
+  <div class="container">
+    <h2>How It Works – Fueling Made Simple</h2>
+    <p class="muted">Four simple steps to get refueled without a gas station trip.</p>
 
-        <div class="steps">
-          <div class="step card">
-            <span class="step-num">1</span>
-            <h3>Request fuel</h3>
-            <p>Tell us where your vehicle is and what fuel you need.</p>
-          </div>
-          <div class="step card">
-            <span class="step-num">2</span>
-            <h3>We arrive</h3>
-            <p>Our team comes to your location and verifies the details.</p>
-          </div>
-          <div class="step card">
-            <span class="step-num">3</span>
-            <h3>You’re good to go</h3>
-            <p>We refuel and you get a confirmation—no station stop required.</p>
-          </div>
-        </div>
+    <div class="steps">
+      <div class="step card">
+        <span class="step-num">1</span>
+        <h3>Park Your Vehicle</h3>
+        <p>
+          Make sure your vehicle is parked on <strong>private property</strong>—such as your home driveway,
+          a private parking lot, or an approved company location.
+        </p>
+        <p class="muted" style="margin-top:10px;">
+          ➡️ Avoid enclosed spaces like garages so our technician can access your vehicle safely.
+        </p>
       </div>
-    </section>
+
+      <div class="step card">
+        <span class="step-num">2</span>
+        <h3>Place Your Order</h3>
+        <p>
+          Open the <strong>ReFuelBCS</strong> app to select your fuel type, location, and preferred delivery time.
+        </p>
+        <p class="muted" style="margin-top:10px;">
+          ➡️ Important: Please ensure your fuel door is <strong>ajar/unlocked</strong> so our technician can access
+          the tank quickly and efficiently.
+        </p>
+      </div>
+
+      <div class="step card">
+        <span class="step-num">3</span>
+        <h3>We Deliver the Fuel</h3>
+        <p>
+          Our certified technician arrives at your location, fuels your vehicle with care,
+          and sends you a <strong>digital receipt</strong> upon completion.
+        </p>
+      </div>
+
+      <div class="step card">
+        <span class="step-num">4</span>
+        <h3>Drive Away Full</h3>
+        <p>
+          That’s it! No detours, no waiting in line—just a full tank delivered directly to you.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
 
     <!-- Services -->
     <section class="section alt" id="services">
