removed ai icons

--- a/refuel/index.html
+++ b/refuel/index.html
@@ -143,7 +143,7 @@
           a private parking lot, or an approved company location.
         </p>
         <p class="muted" style="margin-top:10px;">
-          ➡️ Avoid enclosed spaces like garages so our technician can access your vehicle safely.
+          Avoid enclosed spaces like garages so our technician can access your vehicle safely.
         </p>
       </div>
 
@@ -154,7 +154,7 @@
           Open the <strong>ReFuelBCS</strong> app to select your fuel type, location, and preferred delivery time.
         </p>
         <p class="muted" style="margin-top:10px;">
-          ➡️ Important: Please ensure your fuel door is <strong>ajar/unlocked</strong> so our technician can access
+          Important: Please ensure your fuel door is <strong>ajar/unlocked</strong> so our technician can access
           the tank quickly and efficiently.
         </p>
       </div>
